mineral-museum/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mineral-museum
  labels:
    name: mineral-museum
    app: mineral-museum
